# claude-code-sdk-python

./: .gitignore  .pre-commit-config.yaml  ADVANCED_AGENT_PATTERNS.md  ASYNC_TUI_DESIGN.md  CLAUDE.md  CONTRIBUTING.md  DYNAMIC_MULTI_AGENT_README.md  DYNAMIC_TOOLS_README.md  ENHANCED_AGENT_README.md  ENHANCEMENT_SUMMARY.md  INTERACTIVE_TUI_README.md  MULTIAGENT_FIXES.md  Makefile  README.md  README_MULTI_TURN_AGENT.md  README_OAUTH.md  README_TIMELINE_TOOLS.md  TUI_README.md  VISUALIZER_README.md  advanced_agent_examples.py  advanced_meta_recursive.py  advanced_multiagent_system.py  arthur_biography.md  arthur_colle_biography.md  claude_monitor_applet.py  claude_state_query.py  claude_ui_enhanced.html  claude_visualizer_standalone.py  conversational_state_grid.py  demo_enhanced_agent.py  dynamic_tools_framework.py  example_calculator.py  example_calculator_improvements.json  example_visualizer_integration.py  generate_all_images.sh  generate_meta_recursive_images.py  generate_self_awareness_images.py  generate_single_image.py  gpt_claude_communication.py  helpful_assistant.py  (+31 more)
agent_system/: .env  README.md  __init__.py  app.py  config.py  pyproject.toml  requirements.txt
agent_system/agents/: __init__.py  coder_agent.py  executor_agent.py  orchestrator_agent.py  researcher_agent.py  validator_agent.py
agent_system/core/: __init__.py  base_agent.py  message.py  task.py
agent_system/integrations/: __init__.py  tool_registry_client.py
blog_final/: CONTENTS.md  README.md
docs/: advanced_conversation_features.md  agent-system.md  authentication.md  claude_monitor_guide.md  image_generation.md  multi_turn_conversations.md  notebook_utilities.md  oauth_guide.md  tool_management_integration.md  training_data_generation.md  websocket-server.md
examples/: README_websocket.md  advanced_conversation_features.py  advanced_multi_agents.py  agent_sdk_integration.py  error_handling.py  interactive_chat.py  meta_registration_demo.py  multi_agent_quickstart.py  multi_turn_example.py  oauth_app_example.py  oauth_authentication.py  oauth_demo.py  self_scaffolding_loop.py  session_management.py  test_enhanced_ws_server.py  training_data_generation.py  websocket_oauth_example.py  websocket_ui_server.py
examples/tools/: README.md  basic_tool_usage.py  custom_tool_creation.py  tool_execution_hooks.py  tool_search_and_suggest.py
self_awareness_images/: README.md  gallery.html  generation_metadata.json  index.html
src/claude_code_sdk/: __init__.py  tools_api.py
src/claude_code_sdk/tools/: types.py
tests/: test_auth.py  test_batch.py  test_cache.py  test_cli_commands.py  test_cli_options.py  test_dynamic_multi_agent.py  test_error_handling_comprehensive.py  test_multi_turn.py  test_registry_api.py  test_retry_transport.py  test_websocket_server.py
tests/tools/: test_client.py  test_discovery.py  test_hooks.py
visualizations/: evolution_data.json
